# hermes-stack

./: .env.example  .gitignore  README.en.md  README.md  install.sh
docs/: local-models.en.md  local-models.md
hermes-design-mcp/: core.py  requirements.txt  run.sh  server.py
hermes-docker/: .env.example  .gitignore  Dockerfile.fallback  RUNBOOK.en.md  RUNBOOK.md  docker-compose.yml
hermes-native/: .env.example  README.md  SOUL.md  config.yaml  docker-compose.yml  soul-bmad.md
hermes-native-baseline/: baseline-actual.md
langfuse-docker/: .env.example  (+1 more)
schema-service/: .gitignore  README.es.md  README.md  conftest.py  pyproject.toml
schema-service/app/: client.py  errors.py  main.py  middleware.py  registry.py
schema-service/app/prompts/: __init__.py  apply.txt  bmad_analyze.txt  bmad_architect.txt  bmad_prd.txt  bmad_stories.txt  bmad_ux.txt  design.txt  explore.txt  propose.txt  spec.txt  tasks.txt  verify.txt
schema-service/app/routes/: bmad.py  health.py  sdd.py
schema-service/app/schemas/: __init__.py  analyze.py  apply.py  architect.py  common.py  design.py  explore.py  prd.py  propose.py  spec.py  stories.py  tasks.py  ux.py  verify.py
schema-service/calibration/: compare.py  fixtures.py  judge.py  runner.py  scorer.py  store.py
schema-service/scripts/: smoke.py
schema-service/tests/: test_bmad_bridge.py  test_bmad_routes.py  test_design.py  test_errors.py  test_explore.py  test_middleware.py  test_retry.py
schema-service/tests/calibration/: test_compare.py  test_fixtures.py  test_judge.py  test_runner.py  test_scorer.py  test_store.py
(+21 files in other folders)
