[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-service"
version = "0.1.0"
description = "Schema-driven middleware between SDD orchestrator and local LLM workers"
requires-python = ">=3.11"
dependencies = [
    "instructor>=1.8.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.50",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
